# server/src/business-layer/services/StripeService.ts
@@ -24,6 +24,11 @@ import BookingUtils, {
 } from "../utils/BookingUtils"
 import AuthService from "./AuthService"
 import MailService from "./MailService"
+import {
+  LODGE_CREDIT_ANY_NIGHT_KEY,
+  LODGE_CREDIT_WEEK_NIGHTS_ONLY_KEY,
+  LodgeCreditState
+} from "../utils/CustomerMetadata"
 
 const stripe = new Stripe(process.env.STRIPE_API_KEY)
 
@@ -53,11 +58,37 @@ export default class StripeService {
     return await stripe.products.retrieve(id)
   }
 
-  public async getProductByMetadata(key: string, value: string) {
+  public async getProductByMetadata(
+    key: string,
+    value: string,
+    expand: string[] = []
+  ) {
     const result = await stripe.products.search({
-      query: `metadata['${key}']:'${value}'`
+      query: `metadata['${key}']:'${value}'`,
+      expand
     })
     return result.data
+  }
+
+  public async getLodgeCreditsForUser(
+    customer_id: string
+  ): Promise<LodgeCreditState> {
+    const userData = await stripe.customers.retrieve(customer_id)
+    if (userData.deleted === true) {
+      return {
+        anyNight: 0,
+        weekNightsOnly: 0
+      }
+    }
+
+    return {
+      anyNight: Math.floor(
+        Number(userData.metadata[LODGE_CREDIT_ANY_NIGHT_KEY] || 0)
+      ),
+      weekNightsOnly: Math.floor(
+        Number(userData.metadata[LODGE_CREDIT_WEEK_NIGHTS_ONLY_KEY] || 0)
+      )
+    }
   }
 
   /**
@@ -271,7 +302,8 @@ export default class StripeService {
     customer_id: string,
     expires_after_mins: number = 31,
     custom_text?: Stripe.Checkout.SessionCreateParams.CustomText,
-    allow_promotion_codes: boolean = false
+    allow_promotion_codes: boolean = false,
+    coupon: string | undefined = undefined
   ) {
     const session = await stripe.checkout.sessions.create({
       // consumer changeable
@@ -283,10 +315,11 @@ export default class StripeService {
       // configured internally and should not change
       ui_mode: "embedded",
       mode: "payment",
-      currency: "NZD",
+      currency: "nzd",
       expires_at: dateNowSecs() + expires_after_mins * ONE_MINUTE_S,
       custom_text,
-      allow_promotion_codes
+      ...(allow_promotion_codes && { allow_promotion_codes }),
+      ...(coupon && { discounts: [{ coupon }] })
     })
     return session.client_secret
   }
@@ -503,22 +536,46 @@ export default class StripeService {
     }
   }
 
-  public async addCouponToUser(
+  /**
+   */
+  public async editUserLodgeCredits(
     stripeId: string,
-    amount: number
-  ): Promise<void> {
-    try {
-      const coupon = await stripe.coupons.create({
-        amount_off: amount * 100, // to cents
-        currency: "nzd"
-      })
+    creditState: Partial<LodgeCreditState>
+  ) {
+    const metadataUpdate: Record<string, string> = {}
 
-      await stripe.promotionCodes.create({
-        coupon: coupon.id,
-        customer: stripeId
-      })
-    } catch {
-      throw new Error("Failed to add coupon to user")
+    if (creditState.anyNight !== undefined) {
+      metadataUpdate[LODGE_CREDIT_ANY_NIGHT_KEY] =
+        creditState.anyNight.toString()
     }
+    if (creditState.weekNightsOnly !== undefined) {
+      metadataUpdate[LODGE_CREDIT_WEEK_NIGHTS_ONLY_KEY] =
+        creditState.weekNightsOnly.toString()
+    }
+    await stripe.customers.update(stripeId, {
+      metadata: metadataUpdate
+    })
+  }
+
+  /**
+   * Creates a coupon that can only be used by the user with the specified Stripe ID, and gives them a discount of the specified amount in NZD (cents).
+   * @param amountCents The amount in NZD (cents) that the coupon should be worth.
+   * @param couponName The displayName of the coupon to show.
+   * @param durationMinutes The duration in minutes that the coupon should be valid for.
+   */
+  public async createCoupon(
+    amountCents: number,
+    couponName: string,
+    durationMinutes: number
+  ): Promise<string> {
+    const coupon = await stripe.coupons.create({
+      amount_off: amountCents,
+      currency: "nzd",
+      duration: "once",
+      name: couponName,
+      redeem_by: Math.floor(Date.now() / 1000) + durationMinutes * ONE_MINUTE_S
+    })
+
+    return coupon.id
   }
 }
