# server/src/service-layer/controllers/UserController.ts
@@ -20,6 +20,8 @@ import {
   Security,
   SuccessResponse
 } from "tsoa"
+import StripeService from "../../business-layer/services/StripeService"
+import { LodgeCreditState } from "../../business-layer/utils/CustomerMetadata"
 
 @Route("users")
 export class UsersController extends Controller {
@@ -44,6 +46,38 @@ export class UsersController extends Controller {
     }
 
     return data
+  }
+
+  /**
+   * Fetches how many lodge credits the user has based on uid
+   *
+   * @param request - Takes a UserRecord and uses the UID to fetch the user's additional info.
+   * @returns The quantity of lodge credits the user has.
+   */
+  @SuccessResponse("200", "Fetched lodge credits for user data")
+  @Security("jwt")
+  @Get("self/lodge-credits")
+  public async getCurrentLodgeCredits(
+    @Request() request: SelfRequestModel
+  ): Promise<LodgeCreditState> {
+    const { uid } = request.user
+    const userDataService = new UserDataService()
+    const userData = await userDataService.getUserData(uid)
+    const stripeService = new StripeService()
+
+    let stripeId: string
+    if (!userData.stripe_id) {
+      await stripeService.createCustomerIfNotExist(
+        request.user,
+        userData,
+        userDataService
+      )
+      return { anyNight: 0, weekNightsOnly: 0 }
+    } else {
+      stripeId = userData.stripe_id
+    }
+
+    return await stripeService.getLodgeCreditsForUser(stripeId)
   }
 
   /**
